// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@deleteItem delete item 1`] = `Object {}`;

exports[`@deleteItem delete item when envelope is enabled and pretty response is disabled 1`] = `
Object {
  "headers": Object {
    "x-powered-by": "Express",
  },
  "response": Object {},
  "status": 204,
}
`;

exports[`@deleteItem delete item when envelope is enabled and pretty response is enabled 1`] = `
Object {
  "headers": Object {
    "x-powered-by": "Express",
  },
  "response": Object {},
  "status": 204,
}
`;

exports[`@deleteItem throws not found error when item does not exist 1`] = `
Object {
  "itemId": "6da9dce6-be40-4fac-bd9c-6a2f348a1c87",
  "itemName": "item",
  "transactionId": "1",
}
`;

exports[`@deleteItem throws not found error when item does not exist and envelope is enabled and pretty is disabled 1`] = `
Object {
  "headers": Object {
    "x-powered-by": "Express",
  },
  "response": Object {
    "itemId": "6da9dce6-be40-4fac-bd9c-6a2f348a1c87",
    "itemName": "item",
    "transactionId": "1",
  },
  "status": 404,
}
`;

exports[`@deleteItem throws not found error when item does not exist because filter does not match 1`] = `
Object {
  "itemId": "6da9dce6-be40-4fac-bd9c-6a2f348a1c87",
  "itemName": "item",
  "transactionId": "1",
}
`;
